# autogen-dream-team

./: .gitignore  README.md  azure.yaml
.devcontainer/: devcontainer.json  postcreate.sh
infra/: main.bicep
infra/app/: src.bicep
infra/modules/: fetch-container-image.bicep
infra/shared/: apps-env.bicep  dashboard-web.bicep  keyvault.bicep  registry.bicep
src/: .env.sample  app.py  magentic_one_custom_agent.py  magentic_one_custom_rag_agent.py  magentic_one_helper.py  pyproject.toml  requirements.txt  utils.py
src/examples/: .env.sample  README.md  elon_musk_tax_estimation.py  m13.py  pyproject.toml
